[gd_scene load_steps=15 format=2]

[ext_resource path="res://Characters/enemy/Feesh_Enemy.gd" type="Script" id=1]
[ext_resource path="res://Characters/enemy/Feesh_Enemy.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Shaders/Enemyhit.tres" type="Shader" id=3]
[ext_resource path="res://Characters/Player/Effects.gd" type="Script" id=6]
[ext_resource path="res://testingthings/DetectWall.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/enemy/DetectPortal.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.6451, 9.80361 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 518.362

[sub_resource type="CircleShape2D" id=8]
radius = 24.7197

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.429, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15.2612, 14.0991 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9, 2.00001 )

[sub_resource type="Animation" id=9]
resource_name = "Attack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1.1, 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 3, 4, 4, 4, 3, 2, 1 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "projectile"
}, {
"args": [  ],
"method": "end_of_shoot"
} ]
}

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
position = Vector2( 152, 94 )
scale = Vector2( 3.19604, 3.51087 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
z_index = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0.890196, 0, 1 )
position = Vector2( -0.527283, -0.75 )
z_index = -1
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -1, -1 )
scale = Vector2( 0.0837345, 0.101094 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( 0.625793, 0 )
scale = Vector2( 0.0482886, 0.050547 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -745.146, -264.842 )
shape = SubResource( 7 )

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( -35.982, -13.9567 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
position = Vector2( -2.19019, -3.70279 )
scale = Vector2( 0.0482886, 0.050547 )
frames = ExtResource( 2 )
animation = "Attack"
frame = 1
flip_h = true

[node name="Enemy_effects" type="AnimationPlayer" parent="."]
anims/Stagger = SubResource( 4 )
script = ExtResource( 6 )

[node name="DamageTimer" type="Timer" parent="."]

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 0.81

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.555546, -1.28173 )
rotation = -3.14159
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2( 0, 11.1084 )
rotation = 3.14159
scale = Vector2( 1.5345, 0.427239 )
shape = SubResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -15.9572, -1.70898 )
scale = Vector2( 0.810613, 0.617241 )
enabled = true

[node name="DetectWall" parent="." instance=ExtResource( 8 )]

[node name="DetectPortal" parent="." instance=ExtResource( 9 )]
scale = Vector2( 1.99249, 0.867643 )

[node name="Enemy_Anims" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/Attack = SubResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="BubbleSpawn" type="Position2D" parent="."]
position = Vector2( -13.1413, 0 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
